Bump liftwizard from 2.1.37 to 2.1.39. Sync archetype config files with main project.